--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li><a href="/recommend">Recommend</a></li>
-            <li><a>Contact</a></li>
+            <li><a>Favourites</a></li>
         </ul>
     </nav>
 
@@ -31,7 +31,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <img class="card-img-top" src="{{ image[i] }}">
-                                <h2 class="text-white">{{ book_name[i] }}r</h2>
+                                <h2 class="text-white">{{ book_name[i] }}</h2>
                                 <p class="text-white">{{ author[i] }}</p>
                                 <p class="text-white">Votes - {{ votes[i] }}</p>
                                 <p class="text-white">Rating - {{ rating[i] }}</p>
